--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -27,6 +27,7 @@
 @import "cmps/GigReviews";
 @import "cmps/ShareGigModal";
 @import "cmps/InvoiceModal";
+@import "cmps/ReviewModal";
 
 @import "cmps/GigFilter";
 @import "cmps/MobileFilter";
