further galleryService improvements

--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -46,10 +46,10 @@
             height: 13px;
             width: 19px;
 
-            .star-icon {
+            i {
               padding-left: 1px;
-              width: 50%;
-              height: 75%;
+              width: 12px;
+              height: 13px;
               align-self: center;
             }
           }
