--- a/Frontend/src/assets/styles/cmps/_AsideMenu.scss
+++ b/Frontend/src/assets/styles/cmps/_AsideMenu.scss
@@ -194,8 +194,8 @@
                           width: 48px;
                           height: 48px;
                           position: absolute;
-                          top: 0%;
-                          right: 0%;
+                          top: 0;
+                          right: -8px;
                           cursor: pointer;
                           z-index: 5;
 
@@ -205,6 +205,27 @@
 
                             &:hover {
                               fill: #d6b41a;
+                            }
+                          }
+                        }
+                      }
+
+                      .review-icon {
+                        i {
+                          position: absolute;
+                          bottom: -4px;
+                          left: 0;
+                          cursor: pointer;
+                          z-index: 5;
+                          width: 48px;
+                          height: 48px;
+
+                          svg {
+                            fill: #464443;
+                            max-height: 48px;
+
+                            &:hover {
+                              fill: #888785;
                             }
                           }
                         }
