--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -156,3 +156,27 @@ input[type='number']::-moz-number-spin-down {
     background-color: $clrSecondary5;
   }
 }
+
+.modal-wrapper {
+  align-items: center;
+  background-color: rgba(0, 0, 0, .75);
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 10;
+
+  .close-modal {
+    color: $clrSecondary11;
+    font-size: 20px;
+    height: 50px;
+    padding: 5px 5px 7px;
+    position: absolute;
+    width: 40px;
+    font-weight: 700;
+    background: none;
+  }
+}
