--- a/Frontend/src/assets/styles/cmps/_ShareGigModal.scss
+++ b/Frontend/src/assets/styles/cmps/_ShareGigModal.scss
@@ -1,38 +1,13 @@
-.share-gig-modal-wrapper {
-    align-items: center;
-    background-color: rgba(0, 0, 0, .75);
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    left: 0;
-    position: fixed;
-    right: 0;
-    top: 0;
-    z-index: 10;
-
+.modal-wrapper {
     .share-gig-modal {
-        border-radius: 5px;
+        border-radius: 0.5em;
         max-width: 620px;
-        width: 70vw;
         background-color: $clrPrimary1;
-        height: 283px;
         justify-content: center;
         align-items: center;
         position: relative;
         z-index: 10;
-
-        button {
-            color: $clrSecondary11;
-            font-size: 20px;
-            height: 50px;
-            padding: 5px 5px 7px;
-            position: absolute;
-            right: 5px;
-            top: 0;
-            width: 40px;
-            font-weight: 700;
-            background: none;
-        }
+        padding: 0.75em;
 
         h2 {
             font-size: 24px;
