--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -171,12 +171,24 @@ input[type='number']::-moz-number-spin-down {
 
   .close-modal {
     color: $clrSecondary11;
-    font-size: 20px;
-    height: 50px;
-    padding: 5px 5px 7px;
+    font-size: 24px;
     position: absolute;
-    width: 40px;
     font-weight: 700;
-    background: none;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: $clrPrimary1;
+    right: 5px;
+    top: 5px;
+    box-shadow: 0.025em 0.025em 0.25em 0.0025em $clrSecondary8;
+    transition: color 0.3s, background-color 0.3s;
+
+    &:hover {
+      background: $clrSecondary2;
+      color: $clrSecondary8;
+    }
   }
 }
