--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -79,7 +79,7 @@
       font-weight: bold;
 
       a,
-      button {
+      .header-btn {
         color: $clrSecondary6;
         transition: color 0.3s, background-color 0.3s, border 0.3s;
 
