attempt at making a notification for reviewing orders, new order state

--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -237,6 +237,10 @@
               &.completed {
                 color: $clr13;
               }
+
+              &.reviewed {
+                color: $clrSecondary4;
+              }
             }
           }
         }
