--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -439,6 +439,10 @@
                                 &.completed {
                                     background: $clr12;
                                 }
+
+                                &.reviewed {
+                                    background: $clrSecondary5;
+                                }
                             }
                         }
                     }
