--- a/Frontend/src/assets/styles/cmps/_AsideMenu.scss
+++ b/Frontend/src/assets/styles/cmps/_AsideMenu.scss
@@ -264,6 +264,10 @@
                       &.completed {
                         color: $clr13;
                       }
+
+                      &.reviewed {
+                        color: $clrSecondary4;
+                      }
                     }
                   }
                 }
