--- a/Frontend/src/assets/styles/cmps/_MobileFilter.scss
+++ b/Frontend/src/assets/styles/cmps/_MobileFilter.scss
@@ -7,7 +7,7 @@
   width: 100vw;
   height: 100vh;
   background-color: $clrSecondary2;
-  z-index: 100;
+  // z-index: 100;
 
   .mobile-filter-header {
     padding: 1em 1em;
@@ -46,10 +46,14 @@
 
     .clear {
       color: $clrSecondary4;
+      &.on {
+        color: $clrPrimary2;
+      }
     }
   }
 
   form {
+    position: relative;
     .form-wrapper {
       padding: 0 1em;
 
@@ -62,13 +66,19 @@
         display: flex;
         flex-wrap: wrap;
         gap: 0.5em;
-
-        .radio-item {
-          background-color: $clrPrimary1;
-          font-size: 0.75em;
-          padding: 0.5em;
-          border: 1px solid $clrSecondary4;
-          border-radius: 0.5em;
+        .radio-item-wrapper {
+          margin-block-end: 0.5em;
+          .radio-item {
+            background-color: $clrPrimary1;
+            font-size: 0.9em;
+            padding: 0.5em;
+            border: 1px solid $clrSecondary4;
+            border-radius: 0.5em;
+            &.selected {
+              border: 1px solid $clr1;
+              background-color: $clrSecondary3;
+            }
+          }
         }
       }
 
@@ -93,6 +103,27 @@
             z-index: 1;
           }
         }
+      }
+    }
+    .submit-wrapper {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+
+      background-color: $clrPrimary1;
+      border-block-start: 1px solid $clrSecondary4;
+      width: 100%;
+
+      button {
+        width: 95%;
+        background-color: $bgColor3;
+        margin: 1em;
+        font-size: 0.75em;
+        padding: 1em;
+        border-radius: 0.25em;
+        color: $clrPrimary1;
       }
     }
   }
