changed views into pages

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -52,13 +52,13 @@
 @import "cmps/UserChat";
 @import "cmps/TypingLoader";
 
-// Views
-@import "views/HomePage";
-@import "views/AboutUs";
-@import "views/GigIndex";
-@import "views/GigDetails";
-@import "views/ReviewIndex";
-@import "views/UserProfile";
-@import "views/GigEdit";
-@import "views/GigPurchase";
-@import "views/DashboardPage";
+// Pages
+@import "pages/HomePage";
+@import "pages/AboutUs";
+@import "pages/GigIndex";
+@import "pages/GigDetails";
+@import "pages/ReviewIndex";
+@import "pages/UserProfile";
+@import "pages/GigEdit";
+@import "pages/GigPurchase";
+@import "pages/DashboardPage";
