--- a/Frontend/src/assets/styles/cmps/_AppFooter.scss
+++ b/Frontend/src/assets/styles/cmps/_AppFooter.scss
@@ -20,6 +20,7 @@
             font-family: 'macan-regular';
             color: $clrSecondary4;
             font-size: 14px;
+            font-weight: 400;
         }
 
         .social-icons {
