--- a/Frontend/src/assets/styles/cmps/_LoginSignup.scss
+++ b/Frontend/src/assets/styles/cmps/_LoginSignup.scss
@@ -6,10 +6,9 @@
     bottom: 5%;
     background: $clrPrimary1;
     z-index: 60;
-    border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     display: flex;
-    height: 650px;
+    // height: 650px;
     margin: auto;
 
     .login-notes {
@@ -24,7 +23,7 @@
         .text {
             h2 {
                 font-size: 32px;
-                font-weight: bold;
+                font-weight: 700;
                 margin-bottom: 0.5em;
             }
 
@@ -35,6 +34,7 @@
 
                 h3 {
                     font-size: 18px;
+                    font-weight: 400;
                 }
 
                 img {
@@ -48,7 +48,7 @@
     }
 
     .user-interaction {
-        padding: 3.5em 3em;
+        padding: 1.5em 2.5em 2em;
         justify-content: space-between;
 
         h3 {
@@ -74,7 +74,7 @@
                     label {
                         color: $clrSecondary8;
                         font-weight: 600;
-                        margin-bottom: 0.3em;
+                        margin-bottom: 0.5em;
                     }
 
                     input {
@@ -83,6 +83,7 @@
                         border: 1px solid $clrSecondary45;
                         border-radius: 5px;
                         width: 100%;
+                        margin-block-end: 1em;
 
                         &:focus {
                             border: 1px solid $clrSecondary5;
@@ -97,7 +98,7 @@
             }
 
             button {
-                margin-top: 2em;
+                margin-top: 1em;
                 font-size: 16px;
                 font-weight: 600;
                 line-height: 100%;
@@ -108,6 +109,7 @@
         p {
             font-size: 12px;
             line-height: 20px;
+            color: $clrSecondary6;
         }
     }
 }
