--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -92,7 +92,7 @@
 
         h1 {
           font-family: "macan-bold";
-          margin-bottom: 0.5em;
+          margin-bottom: 0.6em;
           font-weight: 100;
 
           span {
@@ -112,6 +112,7 @@
             font-size: 14px;
             font-family: "macan-bold";
             margin: 0;
+            transition: 0.2s;
 
             &:first-child {
               font-weight: 500;
