--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -211,7 +211,7 @@
   .home-info-wrapper {
     .info-section {
       @media (max-width: 1400px) {
-        padding: 3.5em 2em;
+        padding: 3em 2em;
 
         .text {
           width: 50%;
@@ -426,6 +426,21 @@
 .user-login-wrapper {
   @media (max-width: 900px) {
     width: 400px;
+    border-radius: 15px;
+
+    .login-notes {
+      display: none;
+    }
+
+    .user-interaction {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
 
     .login-notes {
       display: none;
@@ -438,6 +453,8 @@
 
   @media (min-width: 900px) {
     width: 850px;
+    height: 650px;
+    border-radius: 15px;
 
     .user-interaction {
       width: 50%;
@@ -789,6 +806,7 @@
       flex-direction: column;
       gap: 1em;
       align-items: center;
+      font-weight: 400;
     }
   }
 
@@ -799,6 +817,7 @@
       flex-direction: row;
       gap: 2em;
       align-items: baseline;
+      font-weight: 400;
     }
   }
 
