--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -426,6 +426,7 @@
 .user-login-wrapper {
   @media (max-width: 900px) {
     width: 400px;
+    height: 650px;
     border-radius: 15px;
 
     .login-notes {
