further mq works

--- a/Frontend/src/assets/styles/basics/_layout.scss
+++ b/Frontend/src/assets/styles/basics/_layout.scss
@@ -1,9 +1,8 @@
 .main-container {
     display: grid;
-    grid-template-columns: 32px 1fr 32px;
     background-color: $clrPrimary1;
 
-    > * {
+    >* {
         grid-column: 2;
 
         &.full {
@@ -11,26 +10,12 @@
         }
     }
 
-    @include for-narrow-layout {
-        // grid-template-columns: 
-        //     minmax(20px, 1fr)
-        //     minmax(auto, $mobile-breakpoint)
-        //     minmax(20px, 1fr);
-            grid-template-columns: 32px 1fr 32px;
+    @media (max-width: 480px) {
+        grid-template-columns: 16px 1fr 16px;
     }
-    @include for-normal-layout {
-        // grid-template-columns: 
-        //     minmax(20px, 1fr)
-        //     minmax(auto, $narrow-breakpoint)
-        //     minmax(20px, 1fr);
-            grid-template-columns: 32px 1fr 32px;
-    }
-    @include for-wide-layout {
-        // grid-template-columns: 
-        //     minmax(20px, 1fr)
-        //     minmax(auto, $normal-breakpoint)
-        //     minmax(20px, 1fr);
-            grid-template-columns: 32px 1fr 32px;
+
+    @media (min-width: 481px) {
+        grid-template-columns: 32px 1fr 32px;
     }
 }
 
