--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -28,6 +28,7 @@
 @import "cmps/ShareGigModal";
 @import "cmps/InvoiceModal";
 @import "cmps/ReviewModal";
+@import "cmps/GigDetailsInteractions";
 
 @import "cmps/GigFilter";
 @import "cmps/MobileFilter";
