--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -320,6 +320,10 @@
       padding: 1em 1.5em;
     }
 
+    @media(max-width: 480px) {
+      padding: 1em 1em;
+    }
+
     @media (min-width: 1401px) {
       padding: 1em 0em;
     }
@@ -609,10 +613,6 @@
     .gig-details-aside {
       grid-column: 1/-1;
       position: static;
-
-      .gig-interactions {
-        display: none;
-      }
     }
   }
 
