--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -321,7 +321,7 @@
     }
 
     @media(max-width: 480px) {
-      padding: 1em 1em;
+      padding: 1em;
     }
 
     @media (min-width: 1401px) {
@@ -673,7 +673,7 @@
 .profile-page {
   .user-profile {
     @media (max-width: 1240px) {
-      padding: 0 1.25em;
+      padding: 0 2em;
     }
 
     .profile-content {
