dimmed-content code reloaction

--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -157,6 +157,15 @@ input[type='number']::-moz-number-spin-down {
   }
 }
 
+.dimmed-content {
+  transition: background-color 0.3s;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+}
+
 .modal-wrapper {
   align-items: center;
   background-color: rgba(0, 0, 0, .75);
